[tool.poetry]
name = "bottle-tone-experiment"
version = "0.1.0"
description = "Code for empirically investigating the resonance frequencies of a bottle."
authors = ["Viktor Jonsson <viktor.jonsson@cellmax.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyaudio = "^0.2.14"
pyqt6 = "^6.6.1"
scipy = "^1.12.0"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
